Fixes orders and tree

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/operation-tree-widget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/operation-tree-widget.tpl.html
@@ -1,11 +1,11 @@
 ﻿<div class="tile quadro wide" ng-click="">
     <div class="tree-view">
         <div class="tree-scroll">
-            <ul class="tree">
-                <li class="tree-item first">
-                    <ul class="tree-node" ng-init="operation = currentBlade.currentEntity">
+            <ul class="tree" ng-init="operation = currentBlade.currentEntity">
+                <li class="tree-item first" ng-include="'document.html'">
+                    <!-- <ul class="tree-node" ng-init="operation = currentBlade.currentEntity">
                         <li class="tree-item" ng-include="'document.html'"></li>
-                    </ul>
+                    </ul> -->
                 </li>
             </ul>
         </div>
@@ -31,6 +31,6 @@
         </div>
     </div>
     <ul class="tree-node">
-        <li class="tree-item" ng-class="{'last':$last}" ng-repeat="operation in operation.childrenOperations" ng-include="'document.html'"></li>
+        <li class="tree-item" ng-class="{'__selected': currentBlade.currentEntity.id == operation.id}" ng-repeat="operation in operation.childrenOperations" ng-include="'document.html'"></li>
     </ul>
 </script>
