-FIX Order. Tree display fix

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/operation-tree-widget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/operation-tree-widget.tpl.html
@@ -1,11 +1,8 @@
 ﻿<div class="tile quadro wide" ng-click="">
     <div class="tree-view">
         <div class="tree-scroll">
-            <ul class="tree" ng-init="operation = currentOperation">
+            <ul class="tree">
                 <li class="tree-item first" ng-include="'document.html'">
-                    <!-- <ul class="tree-node" ng-init="operation = currentBlade.currentEntity">
-                        <li class="tree-item" ng-include="'document.html'"></li>
-                    </ul> -->
                 </li>
             </ul>
         </div>
