--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/customerOrder-items-widget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/customerOrder-items-widget.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="tile __price double wide" ng-click="openItemsBlade()">
+﻿<div class="tile __price wide" ng-click="openItemsBlade()">
     <span class="tile-count">{{customerOrder.items.length}}</span>
     <span class="tile-descr">Line items</span>
     <span class="tile-price">{{customerOrder.subTotal}}&nbsp;{{customerOrder.currency}}</span>
