--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/widgets/itemPricesWidget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/widgets/itemPricesWidget.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="tile" ng-click="openBlade()">
-    <span class="tile-count">{{elementCount}}</span>
-    <span class="tile-descr">Prices</span>
+﻿<div class="tile double wide" ng-click="openBlade()">
+    <span class="tile-count">{{priceRange}}</span>
+    <span class="tile-descr">Price</span>
 </div>
