--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/customerOrder-totals-widget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/widgets/customerOrder-totals-widget.tpl.html
@@ -4,6 +4,6 @@
         <li class="list-item">Shipping total <span class="list-price">{{customerOrder.shippingTotal}}&nbsp;{{customerOrder.currency}}</span></li>
         <!--<li class="list-item">Tax total <span class="list-price">{{customerOrder.taxTotal}}&nbsp;{{customerOrder.currency}}</span></li>-->
         <li class="list-item">Discount Total <span class="list-price">{{customerOrder.discountTotal}}&nbsp;{{customerOrder.currency}}</span></li>
-        <li class="list-item __total">Total <span class="list-price">{{customerOrder.sum}}&nbsp;{{customerOrder.currency}}</span></li>
+        <li class="list-item __total">Total <span class="list-price">{{customerOrder.total}}&nbsp;{{customerOrder.currency}}</span></li>
     </ul>
 </div>
