--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/navigation/blade/bladeContainer.tpl.html
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/navigation/blade/bladeContainer.tpl.html
@@ -41,7 +41,7 @@
             <ng-include src="toolbarTemplate" />            
         </header>
         <div class="blade-container">
-            <div class="preloader preloader-4" ng-show="blade.isLoading">
+            <div class="loader" ng-show="blade.isLoading">
                 <span></span>
                 <span></span>
                 <span></span>
