Fix notification head and fixe orders

--- a/src/Presentation/WebAdmin/Design/index.html
+++ b/src/Presentation/WebAdmin/Design/index.html
@@ -2307,6 +2307,7 @@
                             </div>
                         </header>
                         <div class="blade-container">
+                            <div class="canceled">Canceled</div>
                             <div class="blade-content __medium-wide">
                                 <div class="blade-inner">
                                     <div class="inner-block">
@@ -2406,6 +2407,9 @@
                                                                 <div class="tree-el __price">
                                                                     <i class="tree-ico fa fa-money"></i>
                                                                     218 USD
+                                                                </div>
+                                                                <div class="tree-el __canceled">
+                                                                    Canceled
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -2665,15 +2669,6 @@
                                                             <td class="table-col ng-binding">0</td>
                                                         </tr>
                                                     </tbody></table>
-                                                </div>
-                                                <div class="form-group __order-currency">
-                                                    <label class="form-label">Currency:</label>
-                                                    <div class="form-input">
-                                                        <select class="chosen-select">
-                                                            <option value="EUR">EUR</option>
-                                                            <option value="USD">USD</option>
-                                                        </select>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
