--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-detail.tpl.html
@@ -12,7 +12,7 @@
                     <div class="form-group">
                         <label class="form-label">Status</label>
                         <div class="form-input">
-                            <select ng-model="blade.currentEntity.status" class="chosen-select">
+                            <select chosen ng-model="blade.currentEntity.status" class="chosen-select">
                                 <option value="new">New</option>
                                 <option value="new">NotPayed</option>
                                 <option value="new">Completed</option>
@@ -22,7 +22,7 @@
                     <div class="form-group">
                         <label class="form-label">Store</label>
                         <div class="form-input">
-                            <select ng-model="blade.currentEntity.storeId" class="chosen-select">
+                            <select chosen ng-model="blade.currentEntity.storeId" class="chosen-select">
                                 <option>{{blade.currentEntity.storeId}}</option>
                             </select>
                         </div>
@@ -38,7 +38,7 @@
                     <div class="form-group">
                         <label class="form-label">Channel</label>
                         <div class="form-input">
-                            <select ng-model="blade.currentEntity.channelId" class="chosen-select">
+                            <select chosen ng-model="blade.currentEntity.channelId" class="chosen-select">
                                 <option>{{blade.currentEntity.channelId}}</option>
                             </select>
                         </div>
@@ -46,7 +46,7 @@
                     <div class="form-group">
                         <label class="form-label">Customer</label>
                         <div class="form-input">
-                            <select ng-model="blade.currentEntity.customerId" class="chosen-select">
+                            <select chosen ng-model="blade.currentEntity.customerId" class="chosen-select">
                                 <option>{{blade.currentEntity.customerId}}</option>
                             </select>
                         </div>
